--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher Profile</title>
     <link rel="stylesheet" href="styles2.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -12,11 +13,26 @@
             <img src="arg-logoL.svg" alt="Logo">
         </div>
         <div class="content">
-            <h1><span class="bold">alejandro rodriguez-garcia</span> is a PhD student at Newcastle University.</h1>
-            <p>my research focuses on enhancing learning in artificial neural networks through cellular heterogeneity and neuromodulatory signaling .</p>
-            <p>i'm interested in develop efficient, robust and adaptable neural networks through bio-inspired approaches.</p>
+            <h1><span class="bold">alejandro rodriguez-garcia</span> is a PhD student.</h1>
+            <p>currently pursuing a PhD in Biosciences under the supervision of Dr. Srikanth Ramaswamy, at the Neural Circuits Laboratory, Newcastle University, UK.</p>
+            <p>i'm interested in enhancing learning in artificial neural networks through cellular heterogeneity and neuromodulatory signaling.</p>
+            <p>my research focuses on developing efficient, robust, and adaptable neural networks through bio-inspired approaches.</p>
             <p>my main focus resides in spiking neural networks, neural heterogeneity, neuromodulation, computational neuroscience, reinforcement learning, deep learning.</p>
             <p>i hold a background in physics and computational neuroscience.</p>
+        </div>
+        <div class="social-links">
+            <a class="link" data-title="linkedin.com/in/alejandrorodgar" href="https://www.linkedin.com/in/alejandrorodgar" target="_blank" rel="noopener" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a class="link" data-title="github.com/alejandrorg00" href="https://github.com/alejandrorg00" target="_blank" rel="noopener" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>         
+            <a class="link" data-title="scholar.google.com/alejandrorodgar" href="https://scholar.google.com/citations?user=uLAQ0mkAAAAJ&hl=es&authuser=1&oi=sra" target="_blank" rel="noopener" aria-label="Google Scholar">
+                <i class="fas fa-graduation-cap"></i>
+            </a>
+            <a class="link" data-title="a.rodriguez-garcia2@newcastle.ac.uk" href="mailto:a.rodriguez-garcia2@newcastle.ac.uk" rel="noopener" aria-label="Email">
+                <i class="fas fa-envelope"></i>
+            </a>
         </div>
     </div>
 </body>
