--- a/index2.html
+++ b/index2.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher Profile</title>
     <link rel="stylesheet" href="styles2.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <div class="container">
         <div class="logo">
             <img src="arg-logoL.svg" alt="Logo">
         </div>
         <div class="content">
-            <h1><span class="bold">alejandro rodriguez-garcia</span> is a PhD student.</h1>
-            <p>currently pursuing a PhD in Biosciences under the supervision of Dr. Srikanth Ramaswamy, at the Neural Circuits Laboratory, Newcastle University, UK.</p>
+            <h1><span class="bold">alejandro rodriguez-garcia</span>, PhD student at Newcastle University.</h1>
+            <p>currently pursuing a PhD in Biosciences under the supervision of Dr. Srikanth Ramaswamy at the Neural Circuits Laboratory.</p>
             <p>i'm interested in enhancing learning in artificial neural networks through cellular heterogeneity and neuromodulatory signaling.</p>
             <p>my research focuses on developing efficient, robust, and adaptable neural networks through bio-inspired approaches.</p>
             <p>my main focus resides in spiking neural networks, neural heterogeneity, neuromodulation, computational neuroscience, reinforcement learning, deep learning.</p>
@@ -22,7 +21,7 @@
         </div>
         <div class="social-links">
             <a class="link" data-title="linkedin.com/in/alejandrorodgar" href="https://www.linkedin.com/in/alejandrorodgar" target="_blank" rel="noopener" aria-label="LinkedIn">
-                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-linkedin-in"></i>
             </a>
             <a class="link" data-title="github.com/alejandrorg00" href="https://github.com/alejandrorg00" target="_blank" rel="noopener" aria-label="GitHub">
                 <i class="fab fa-github"></i>
@@ -32,6 +31,10 @@
             </a>
             <a class="link" data-title="a.rodriguez-garcia2@newcastle.ac.uk" href="mailto:a.rodriguez-garcia2@newcastle.ac.uk" rel="noopener" aria-label="Email">
                 <i class="fas fa-envelope"></i>
+            </a>
+            
+            <a class="link" data-title="a.rodriguez-garcia2@newcastle.ac.uk" href="sCV_arg_eng.pdf" target="_blank" aria-label="CV">
+                <i class="fa-solid fa-address-card"></i>
             </a>
         </div>
     </div>
